--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,6 @@
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get" name="search-data">
           <label class="visually-hidden search-title" for="search">Поиск по сайту</label>
           <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту">
-          <button class="btn search-btn" type="submit">Найти</button>
         </form>
         <ul class="auth-menu">
           <li class="auth-item">
@@ -145,10 +144,10 @@
         </ul>
         <ul class="sorting-list">
           <li class="sotring-item sotring-item-current">
-            <a class="btn sorting-btn sorting-direction-btn" href="#">По возрастанию</a>
+            <a class="btn sorting-btn sorting-direction-btn" href="#" aria-label="По возрастанию"></a>
           </li>
           <li>
-            <a class="btn sorting-btn sorting-direction-btn" href="#">По убыванию</a>
+            <a class="btn sorting-btn sorting-direction-btn" href="#" aria-label="По убыванию"></a>
           </li>
         </ul>
       </div>
@@ -159,7 +158,7 @@
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
-            <a class="btn catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
+            <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Любительская селфи-палка</a>
             </h3>
@@ -168,7 +167,7 @@
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
-            <a class="btn catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
+            <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Профессиональная селфи-палка</a>
             </h3>
@@ -177,7 +176,7 @@
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
-            <a class="btn catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
+            <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Непотопляемая селфи-палка</a>
             </h3>
@@ -186,7 +185,7 @@
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
             <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
-            <a class="btn catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
+            <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Селфи-палка «Следуй за мной»</a>
             </h3>
@@ -198,26 +197,26 @@
       <div class="pagination">
         <ul class="pagination-list">
           <li class="pagination-item">
-            <a class="btn pagination-btn pagination-btn disabled" href="#">Назад</a>
+            <a class="pagination-btn disabled">Назад</a>
           </li>
           <li class="pagination-item pagination-item-current">
-            <a class="btn pagination-btn" href="#">1</a>
+            <a class="pagination-btn" href="#">1</a>
           </li>
           <li class="pagination-item">
-            <a class="btn pagination-btn" href="#">2</a>
+            <a class="pagination-btn" href="#">2</a>
           </li>
           <li class="pagination-item">
-            <a class="btn pagination-btn" href="#">3</a>
+            <a class="pagination-btn" href="#">3</a>
           </li>
           <li class="pagination-item">
-            <a class="btn pagination-btn" href="#">Вперед</a>
+            <a class="pagination-btn" href="#">Вперед</a>
           </li>
         </ul>
       </div>
     </main>
 
     <footer class="footer">
-      <a class="logo footer-logo">DEVICE</a>
+      <a class="logo footer-logo" href="index.html">DEVICE</a>
       <ul class="auth-menu">
         <li class="auth-item">
           <a class="auth-link" href="#">Валентин Петухов</a>
@@ -249,13 +248,13 @@
       <p class="footer-details">Тел.: +7 (495) 495-95-95</p>
       <ul class="footer-social">
         <li class="social-item">
-          <a class="social-link" href="#">Facebook</a>
+          <a class="social-link" href="#" aria-label="Facebook"></a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#">Instagram</a>
+          <a class="social-link" href="#" aria-label="Instagram"></a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#">Twitter</a>
+          <a class="social-link" href="#" aria-label="Twitter"></a>
         </li>
       </ul>
       <a class="copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
