--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo header-logo">DEVICE</a>
+      <a class="logo header-logo disabled">DEVICE</a>
       <nav class="navigation">
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get" name="search-data">
           <label class="visually-hidden search-title" for="search">Поиск по сайту</label>
           <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту">
-          <button class="btn search-btn" type="submit">Найти</button>
         </form>
         <ul class="auth-menu">
           <li class="auth-item">
@@ -72,13 +71,13 @@
         <h2 class="visually-hidden promo-title">Промо-блок</h2>
         <ul class="promo-control">
           <li class="promo-control-item-current">
-            <button class="visually-hidden btn promo-control-btn" type="button">Первый слайд</button>
+            <button class="visually-hidden promo-control-btn" type="button">Первый слайд</button>
           </li>
           <li class="promo-control-item">
-            <button class="visually-hidden btn promo-control-btn" type="button">Второй слайд</button>
+            <button class="visually-hidden promo-control-btn" type="button">Второй слайд</button>
           </li>
           <li class="promo-control-item">
-            <button class="visually-hidden btn promo-control-btn" type="button">Третий слайд</button>
+            <button class="visually-hidden promo-control-btn" type="button">Третий слайд</button>
           </li>
         </ul>
         <ul class="promo-list">
@@ -161,7 +160,7 @@
         <h2 class="visually-hidden services-title">Сервис</h2>
         <ul class="services-control-list">
           <li class="serveices-control-item serveices-control-item-current">
-            <button class="btn services-btn services-btn" type="button">Доставка</button>
+            <button class="btn services-btn" type="button">Доставка</button>
           </li>
           <li class="serveices-control-item">
             <button class="btn services-btn" type="button">Гарантия</button>
@@ -229,7 +228,7 @@
     </main>
 
     <footer class="footer">
-      <a class="logo footer-logo">DEVICE</a>
+      <a class="logo footer-logo disabled">DEVICE</a>
       <ul class="auth-menu">
         <li class="auth-item">
           <a class="auth-link" href="#">Войти</a>
@@ -258,13 +257,13 @@
       <p class="footer-details">Тел.: +7 (495) 495-95-95</p>
       <ul class="footer-social">
         <li class="social-item">
-          <a class="social-link" href="#">Facebook</a>
+          <a class="social-link" href="#" aria-label="Facebook"></a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#">Instagram</a>
+          <a class="social-link" href="#" aria-label="Instagram"></a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#">Twitter</a>
+          <a class="social-link" href="#" aria-label="Twitter"></a>
         </li>
       </ul>
       <a class="copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
@@ -277,25 +276,25 @@
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post" name="feedback-data">
         <p class="feedback-item">
           <label class="feedback-item-title" for="fullname">Ваше имя:</label>
-          <input class="feedback-field" type="text" name="fullname" id="fullname" placeholder="Имя Фамилия">
+          <input class="feedback-field" type="text" name="fullname" value="" id="fullname" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item">
           <label class="feedback-item-title" for="email">Ваш e-mail:</label>
-          <input class="feedback-field" type="email" name="email" id="email" placeholder="email@example.com">
+          <input class="feedback-field" type="email" name="email" value="" id="email" placeholder="email@example.com">
         </p>
         <p class="feedback-item">
           <label class="feedback-item-title" for="message">Текст письма:</label>
-          <textarea class="feedback-field" name="message" id="message" placeholder="В свободной форме"></textarea>
+          <textarea class="feedback-field" name="message" value="" id="message" placeholder="В свободной форме"></textarea>
         </p>
         <button class="btn feedback-btn" type="submit">Отправить</button>
       </form>
-      <button class="btn modal-close" type="button">Закрыть</button>
+      <button class="modal-close-btn" type="button" aria-label="Закрыть"></button>
     </section>
 
     <section class="modal modal-map">
       <h2 class="modal-map-title">Как до нас добраться</h2>
       <img class="modal-map-image" src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
-      <button class="btn modal-close" type="button">Закрыть</button>
+      <button class="modal-close-btn" type="button" aria-label="Закрыть"></button>
     </section>
   </body>
 </html>
