--- a/catalog.html
+++ b/catalog.html
@@ -8,18 +8,19 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo header-logo" href="index.html">DEVICE</a>
+      <a class="logo header-logo" href="index.html">Device</a>
       <nav class="navigation">
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get" name="search-data">
-          <label class="visually-hidden search-title" for="search">Поиск по сайту</label>
+          <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту">
+            <button class="search-btn" type="submit">Найти</button>
         </form>
         <ul class="auth-menu">
           <li class="auth-item">
             <a class="auth-link" href="#">Валентин Петухов</a>
           </li>
           <li class="auth-item">
-            <a class="auth-link" href="#">Выйти</a>
+            <a class="auth-link logout-link" href="#">Выйти</a>
           </li>
         </ul>
         <ul class="shopping-menu">
@@ -32,7 +33,7 @@
         </ul>
         <ul class="site-menu">
           <li class="site-menu-item header-catalog">
-            <a class="header-catalog-title" href="catalog.html">Каталог товаров</a>
+            <a class="site-menu-link header-catalog-title" href="catalog.html">Каталог товаров</a>
             <ul class="header-catalog-menu">
               <li class="header-catalog-item">
                 <a class="header-catalog-link" href="#">Виртуальная реальность</a>
@@ -76,7 +77,9 @@
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="#">Каталог товаров</a>
         </li>
-        <li class="breadcrumbs-item breadcrumbs-item-current">Моноподы для селфи</li>
+        <li class="breadcrumbs-item current">
+          <a class="breadcrumbs-link disabled">Моноподы для селфи</a>
+        </li>
       </ul>
 
       <section class="filter">
@@ -84,8 +87,8 @@
         <form class="filter-form" action="https://echo.htmlacademy.ru" method="get" name="filter-data">
           <fieldset class="filter-group">
            <legend class="filter-group-title">Стоимость</legend>
-           <span class="filter-slider">От 0</span>
-           <span class="filter-slider">До 5000</span>
+           <span class="filter-slider-label">От 0</span>
+           <span class="filter-slider-label">До 5000</span>
           </fieldset>
           <fieldset class="filter-group">
             <legend class="filter-group-title">Цвет</legend>
@@ -131,33 +134,37 @@
 
       <div class="sorting">
         <h2 class="sorting-title">Сортировка:</h2>
-        <ul class="sorting-list">
-          <li class="sotring-item sotring-item-current">
-            <a class="btn sorting-btn sorting-type-btn" href="#">По цене</a>
+        <ul class="sorting-list sorting-type-list">
+          <li class="sorting-type-item current">
+            <a class="sorting-type-btn" href="#">По цене</a>
           </li>
-          <li>
-            <a class="btn sorting-btn sorting-type-btn" href="#">По типу</a>
+          <li class="sorting-type-item">
+            <a class="sorting-type-btn" href="#">По типу</a>
           </li>
-          <li>
-            <a class="btn sorting-btn sorting-type-btn" href="#">По популяности</a>
+          <li class="sorting-type-item">
+            <a class="sorting-type-btn" href="#">По популярности</a>
           </li>
         </ul>
-        <ul class="sorting-list">
-          <li class="sotring-item sotring-item-current">
-            <a class="btn sorting-btn sorting-direction-btn" href="#" aria-label="По возрастанию"></a>
+        <ul class="sorting-list sorting-direction-list">
+          <li class="sorting-direction-item">
+            <a class="sorting-direction-btn" href="#">
+              <span class="visually-hidden">В прямом порядке</span>
+              </a>
           </li>
-          <li>
-            <a class="btn sorting-btn sorting-direction-btn" href="#" aria-label="По убыванию"></a>
+          <li class="sorting-direction-item current">
+            <a class="sorting-direction-btn" href="#">
+              <span class="visually-hidden">В обратном порядке</span>
+            </a>
           </li>
         </ul>
       </div>
 
       <section class="catalog">
-        <h2 class="visually-hidden catalog-title">Список моноподов</h2>
+        <h2 class="visually-hidden">Список моноподов</h2>
         <ul class="catalog-list">
-          <li class="catalog-item">
+          <li class="catalog-item active">
             <img class="catalog-image" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-            <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
+            <a class="btn follow-btn catalog-btn" href="#">В корзину</a>
             <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Любительская селфи-палка</a>
@@ -166,7 +173,7 @@
           </li>
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-            <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
+            <a class="btn follow-btn catalog-btn" href="#">В корзину</a>
             <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Профессиональная селфи-палка</a>
@@ -175,7 +182,7 @@
           </li>
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-            <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
+            <a class="btn follow-btn catalog-btn" href="#">В корзину</a>
             <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Непотопляемая селфи-палка</a>
@@ -184,7 +191,7 @@
           </li>
           <li class="catalog-item">
             <img class="catalog-image" src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-            <a class="btn catalog-btn catalog-cart-btn" href="#">В корзину</a>
+            <a class="btn follow-btn catalog-btn" href="#">В корзину</a>
             <a class="catalog-btn catalog-compare-btn" href="#">Добавить к сравнению</a>
             <h3 class="catalog-item-title">
               <a class="catalog-link" href="#">Селфи-палка «Следуй за мной»</a>
@@ -199,15 +206,9 @@
           <li class="pagination-item">
             <a class="pagination-btn disabled">Назад</a>
           </li>
-          <li class="pagination-item pagination-item-current">
-            <a class="pagination-btn" href="#">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-btn" href="#">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-btn" href="#">3</a>
-          </li>
+          <li class="pagination-item pagination-indicator current">1</li>
+          <li class="pagination-item pagination-indicator">2</li>
+          <li class="pagination-item pagination-indicator">3</li>
           <li class="pagination-item">
             <a class="pagination-btn" href="#">Вперед</a>
           </li>
@@ -216,13 +217,13 @@
     </main>
 
     <footer class="footer">
-      <a class="logo footer-logo" href="index.html">DEVICE</a>
+      <a class="logo footer-logo" href="index.html">Device</a>
       <ul class="auth-menu">
         <li class="auth-item">
           <a class="auth-link" href="#">Валентин Петухов</a>
         </li>
         <li class="auth-item">
-          <a class="auth-link" href="#">Выйти</a>
+          <a class="auth-link logout-link" href="#">Выйти</a>
         </li>
       </ul>
       <ul class="shopping-menu">
@@ -236,25 +237,31 @@
       <p class="footer-details">г. Москва, ул. Строителей, 15</p>
       <ul class="site-menu">
         <li class="site-menu-item">
-          <a href="site-menu-link">Доставка</a>
+          <a class="site-menu-link" href="#">Доставка</a>
         </li>
         <li class="site-menu-item">
-          <a href="site-menu-link">Гарантия</a>
+          <a class="site-menu-link" href="#">Гарантия</a>
         </li>
         <li class="site-menu-item">
-          <a href="site-menu-link">Контакты</a>
+          <a class="site-menu-link" href="#">Контакты</a>
         </li>
       </ul>
       <p class="footer-details">Тел.: +7 (495) 495-95-95</p>
       <ul class="footer-social">
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Facebook"></a>
+          <a class="social-link" href="#" aria-label="Facebook">
+            <span class="visually-hidden">Facebook</span>
+          </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Instagram"></a>
+          <a class="social-link" href="#" aria-label="Instagram">
+            <span class="visually-hidden">Instagram</span>
+          </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Twitter"></a>
+          <a class="social-link" href="#" aria-label="Twitter">
+            <span class="visually-hidden">Twitter</span>
+          </a>
         </li>
       </ul>
       <a class="copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
