--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo header-logo disabled">DEVICE</a>
+      <a class="logo header-logo disabled">Device</a>
       <nav class="navigation">
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get" name="search-data">
-          <label class="visually-hidden search-title" for="search">Поиск по сайту</label>
+          <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input class="search-field" type="search" name="search" id="search" placeholder="Поиск по сайту">
+          <button class="search-btn" type="submit">Найти</button>
         </form>
         <ul class="auth-menu">
           <li class="auth-item">
@@ -29,7 +30,7 @@
         </ul>
         <ul class="site-menu">
           <li class="site-menu-item header-catalog">
-            <a class="header-catalog-title" href="catalog.html">Каталог товаров</a>
+            <a class="site-menu-link header-catalog-title" href="catalog.html">Каталог товаров</a>
             <ul class="header-catalog-menu">
               <li class="header-catalog-item">
                 <a class="header-catalog-link" href="#">Виртуальная реальность</a>
@@ -64,20 +65,23 @@
       </nav>
     </header>
 
-    <main class="container">
-      <h1 class="visually-hidden page-title">Магазин цифровой техники «Девайс»</h1>
+    <main class="main container">
+      <h1 class="visually-hidden">Магазин цифровой техники «Девайс»</h1>
 
       <section class="promo">
-        <h2 class="visually-hidden promo-title">Промо-блок</h2>
+        <h2 class="visually-hidden">Промо-блок</h2>
         <ul class="promo-control">
-          <li class="promo-control-item-current">
-            <button class="visually-hidden promo-control-btn" type="button">Первый слайд</button>
+          <li class="promo-control-item current">
+            <label class="visually-hidden" for="slide-1">Первый слайд</label>
+            <button class="promo-control-btn" type="button" id="slide-1"></button>
           </li>
           <li class="promo-control-item">
-            <button class="visually-hidden promo-control-btn" type="button">Второй слайд</button>
+            <label class="visually-hidden" for="slide-2">Второй слайд</label>
+            <button class="promo-control-btn" type="button" id="slide-2"></button>
           </li>
           <li class="promo-control-item">
-            <button class="visually-hidden promo-control-btn" type="button">Третий слайд</button>
+            <label class="visually-hidden" for="slide-3">Третий слайд</label>
+            <button class="promo-control-btn" type="button" id="slide-3"></button>
           </li>
         </ul>
         <ul class="promo-list">
@@ -97,7 +101,7 @@
                 <td class="promo-cell">Материал</td>
               </tr>
             </table>
-            <a class="btn promo-follow-btn" href="#">Подробнее</a>
+            <a class="btn follow-btn promo-follow-btn" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
             <img class="promo-image" src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
@@ -111,7 +115,7 @@
                 <td class="promo-cell">Без подзарядки</td>
               </tr>
             </table>
-            <a class="btn promo-follow-btn" href="#">Подробнее</a>
+            <a class="btn follow-btn promo-follow-btn" href="#">Подробнее</a>
           </li>
           <li class="promo-item">
             <img class="promo-image" src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
@@ -127,13 +131,13 @@
                 <td class="promo-cell">Радиус поражения</td>
               </tr>
             </table>
-            <a class="btn promo-follow-btn" href="#">Подробнее</a>
+            <a class="btn follow-btn promo-follow-btn" href="#">Подробнее</a>
           </li>
         </ul>
       </section>
 
       <section class="popular">
-        <h2 class="visually-hidden popular-title">Популярные товары</h2>
+        <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="popular-list">
           <li class="popular-item">
             <a class="popular-link" href="#">Виртуальная реальность</a>
@@ -157,9 +161,9 @@
       </section>
 
       <section class="services">
-        <h2 class="visually-hidden services-title">Сервис</h2>
-        <ul class="services-control-list">
-          <li class="serveices-control-item serveices-control-item-current">
+        <h2 class="visually-hidden">Сервис</h2>
+        <ul class="services-control">
+          <li class="serveices-control-item current">
             <button class="btn services-btn" type="button">Доставка</button>
           </li>
           <li class="serveices-control-item">
@@ -171,22 +175,22 @@
         </ul>
         <ul class="services-list">
           <li class="services-item">
-            <h3 class="services-item-title">Доставка</h3>
+            <h3 class="services-item-title main-section-title">Доставка</h3>
             <p class="desc services-desc">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li class="services-item">
-            <h3 class="services-item-title">Гарантия</h3>
+            <h3 class="services-item-title main-section-title">Гарантия</h3>
             <p class="desc services-desc">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>Товар, не дом, конечно же.</p>
           </li>
           <li class="services-item">
-            <h3 class="services-item-title">Кредит</h3>
+            <h3 class="services-item-title main-section-title">Кредит</h3>
             <p class="desc services-desc">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
           </li>
         </ul>
       </section>
 
       <section class="brands">
-        <h2 class="visually-hidden brands-title">Бренды</h2>
+        <h2 class="visually-hidden">Бренды</h2>
         <ul class="brands-list">
           <li class="brands-item">
             <img class="brands-image" src="img/logo-1.png" width="260" height="100" alt="DJI">
@@ -204,31 +208,31 @@
       </section>
 
       <section class="reference">
-        <h2 class="visually-hidden reference-title">Справочная информация</h2>
+        <h2 class="visually-hidden">Справочная информация</h2>
         <div class="reference-item">
-          <h3 class="reference-item-title">О нас</h3>
-          <p class="desc reference-item-desc">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p class="desc reference-item-desc">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+          <h3 class="reference-item-title main-section-title">О нас</h3>
+          <p class="desc reference-desc">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="desc reference-desc">Мы можем доставить ваш товар в самые отдаленные точки России! <span class="uppercase-caption">Device</span> работает со многими транспортными компаниями:</p>
           <ul class="partners-list">
             <li class="partners-item">Деловые Линии</li>
             <li class="partners-item">Автотрейдинг</li>
             <li class="partners-item">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="btn reference-follow-btn" href="#">Подробнее о нас</a>
+          <a class="btn follow-btn reference-follow-btn" href="#">Подробнее о нас</a>
         </div>
         <div class="reference-item">
-          <h3 class="reference-item-title">Контакты</h3>
-          <p class="desc reference-item-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <h3 class="reference-item-title main-section-title">Контакты</h3>
+          <p class="desc reference-desc">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
           <a class="map-link" href="#">
             <img class="map-image" src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
           </a>
-          <a class="btn reference-follow-btn" href="#">Напишите нам</a>
+          <a class="btn follow-btn reference-follow-btn" href="#">Напишите нам</a>
         </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo footer-logo disabled">DEVICE</a>
+      <a class="logo footer-logo disabled">Device</a>
       <ul class="auth-menu">
         <li class="auth-item">
           <a class="auth-link" href="#">Войти</a>
@@ -245,25 +249,31 @@
       <p class="footer-details">г. Москва, ул. Строителей, 15</p>
       <ul class="site-menu">
         <li class="site-menu-item">
-          <a href="site-menu-link">Доставка</a>
+          <a class="site-menu-link" href="#">Доставка</a>
         </li>
         <li class="site-menu-item">
-          <a href="site-menu-link">Гарантия</a>
+          <a class="site-menu-link" href="#">Гарантия</a>
         </li>
         <li class="site-menu-item">
-          <a href="site-menu-link">Контакты</a>
+          <a class="site-menu-link" href="#">Контакты</a>
         </li>
       </ul>
       <p class="footer-details">Тел.: +7 (495) 495-95-95</p>
       <ul class="footer-social">
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Facebook"></a>
+          <a class="social-link" href="#" aria-label="Facebook">
+            <span class="visually-hidden">Facebook</span>
+          </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Instagram"></a>
+          <a class="social-link" href="#" aria-label="Instagram">
+            <span class="visually-hidden">Instagram</span>
+          </a>
         </li>
         <li class="social-item">
-          <a class="social-link" href="#" aria-label="Twitter"></a>
+          <a class="social-link" href="#" aria-label="Twitter">
+            <span class="visually-hidden">Twitter</span>
+          </a>
         </li>
       </ul>
       <a class="copyright" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
@@ -272,29 +282,31 @@
     </footer>
 
     <section class="modal modal-feedback">
-      <h2 class="visually-hidden feedback-title">Форма обратной связи</h2>
+      <h2 class="visually-hidden">Форма обратной связи</h2>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post" name="feedback-data">
         <p class="feedback-item">
           <label class="feedback-item-title" for="fullname">Ваше имя:</label>
-          <input class="feedback-field" type="text" name="fullname" value="" id="fullname" placeholder="Имя Фамилия">
+          <input class="feedback-field" type="text" name="fullname" id="fullname" placeholder="Имя Фамилия">
         </p>
         <p class="feedback-item">
           <label class="feedback-item-title" for="email">Ваш e-mail:</label>
-          <input class="feedback-field" type="email" name="email" value="" id="email" placeholder="email@example.com">
+          <input class="feedback-field" type="email" name="email" id="email" placeholder="email@example.com">
         </p>
         <p class="feedback-item">
           <label class="feedback-item-title" for="message">Текст письма:</label>
-          <textarea class="feedback-field" name="message" value="" id="message" placeholder="В свободной форме"></textarea>
+          <textarea class="feedback-field" name="message" id="message" placeholder="В свободной форме"></textarea>
         </p>
-        <button class="btn feedback-btn" type="submit">Отправить</button>
+        <button class="btn follow-btn feedback-btn" type="submit">Отправить</button>
       </form>
-      <button class="modal-close-btn" type="button" aria-label="Закрыть"></button>
+      <label class="visually-hidden" for="feedback-close">Закрыть</label>
+      <button class="modal-close-btn" type="button" id="feedback-close"></button>
     </section>
 
     <section class="modal modal-map">
-      <h2 class="modal-map-title">Как до нас добраться</h2>
+      <h2 class="visually-hidden">Как до нас добраться</h2>
       <img class="modal-map-image" src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
-      <button class="modal-close-btn" type="button" aria-label="Закрыть"></button>
+      <label class="visually-hidden" for="map-close">Закрыть</label>
+      <button class="modal-close-btn" type="button" id="map-close"></button>
     </section>
   </body>
 </html>
