Auxiliary files added

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
                 <a class="header-catalog-link" href="#">Виртуальная реальность</a>
               </li>
               <li class="header-catalog-item">
-                <a class="header-catalog-link" href="#">Моноподы для селфи</a>
+                <a class="header-catalog-link" href="catalog.html">Моноподы для селфи</a>
               </li>
               <li class="header-catalog-item">
                 <a class="header-catalog-link" href="#">Экшн-камеры</a>
@@ -128,7 +128,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="btn filter-btn" type="submit">Показать</button>
+          <button class="btn follow-btn filter-btn" type="submit">Показать</button>
         </form>
       </section>
 
