--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="header-catalog-link" href="#">Виртуальная реальность</a>
               </li>
               <li class="header-catalog-item">
-                <a class="header-catalog-link" href="#">Моноподы для селфи</a>
+                <a class="header-catalog-link" href="catalog.html">Моноподы для селфи</a>
               </li>
               <li class="header-catalog-item">
                 <a class="header-catalog-link" href="#">Экшн-камеры</a>
@@ -72,16 +72,19 @@
         <h2 class="visually-hidden">Промо-блок</h2>
         <ul class="promo-control">
           <li class="promo-control-item current">
-            <label class="visually-hidden" for="slide-1">Первый слайд</label>
-            <button class="promo-control-btn" type="button" id="slide-1"></button>
+            <button class="promo-control-btn" type="button">
+              <span class="visually-hidden">Первый слайд</span>
+            </button>
           </li>
           <li class="promo-control-item">
-            <label class="visually-hidden" for="slide-2">Второй слайд</label>
-            <button class="promo-control-btn" type="button" id="slide-2"></button>
+            <button class="promo-control-btn" type="button">
+              <span class="visually-hidden">Второй слайд</span>
+            </button>
           </li>
           <li class="promo-control-item">
-            <label class="visually-hidden" for="slide-3">Третий слайд</label>
-            <button class="promo-control-btn" type="button" id="slide-3"></button>
+            <button class="promo-control-btn" type="button">
+              <span class="visually-hidden">Третий слайд</span>
+            </button>
           </li>
         </ul>
         <ul class="promo-list">
@@ -143,7 +146,7 @@
             <a class="popular-link" href="#">Виртуальная реальность</a>
           </li>
           <li class="popular-item">
-            <a class="popular-link" href="#">Моноподы для селфи</a>
+            <a class="popular-link" href="catalog.html">Моноподы для селфи</a>
           </li>
           <li class="popular-item">
             <a class="popular-link" href="#">Экшн-камеры</a>
@@ -298,15 +301,17 @@
         </p>
         <button class="btn follow-btn feedback-btn" type="submit">Отправить</button>
       </form>
-      <label class="visually-hidden" for="feedback-close">Закрыть</label>
-      <button class="modal-close-btn" type="button" id="feedback-close"></button>
+      <button class="modal-close-btn" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
     </section>
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <img class="modal-map-image" src="img/map.png" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
-      <label class="visually-hidden" for="map-close">Закрыть</label>
-      <button class="modal-close-btn" type="button" id="map-close"></button>
+      <button class="modal-close-btn" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
     </section>
   </body>
 </html>
