--- a/catalog.html
+++ b/catalog.html
@@ -71,7 +71,8 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main class="main">
+
       <h1 class="page-title">Моноподы для селфи</h1>
       <ul class="breadcrumbs-list">
         <li class="breadcrumbs-item">
