--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/outline.css"> -->
+    <link rel="stylesheet" href="css/outline.css">
   </head>
   <body class="main-page">
     <header class="header">
+      <div class="container">
       <nav class="navigation">
         <a class="logo header-logo disabled">Device</a>
         <div class="user-navigation">
@@ -66,9 +67,10 @@
           </li>
         </ul>
       </nav>
+    </div>
     </header>
 
-    <main class="container">
+    <main class="main">
       <h1 class="visually-hidden">Магазин цифровой техники «Девайс»</h1>
 
       <section class="promo">
@@ -298,15 +300,15 @@
     <section class="modal modal-feedback">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post" name="feedback-data">
-        <p class="feedback-item feedback-input">
+        <p class="feedback-item feedback-input-item">
           <label class="feedback-item-title" for="fullname">Ваше имя:</label>
           <input class="feedback-field" type="text" name="fullname" id="fullname" placeholder="Имя Фамилия">
         </p>
-        <p class="feedback-item feedback-input">
+        <p class="feedback-item feedback-input-item">
           <label class="feedback-item-title" for="email">Ваш e-mail:</label>
           <input class="feedback-field" type="email" name="email" id="email" placeholder="email@example.com">
         </p>
-        <p class="feedback-item feedback-textarea">
+        <p class="feedback-item feedback-textarea-item">
           <label class="feedback-item-title" for="message">Текст письма:</label>
           <textarea class="feedback-field" name="message" id="message" placeholder="В свободной форме"></textarea>
         </p>
