--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/outline.css">
+    <!-- <link rel="stylesheet" href="css/outline.css"> -->
   </head>
   <body class="main-page">
     <header class="header">
