--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
               <button class="search-btn" type="submit">Найти</button>
             </form>
             <ul class="auth-menu header-auth-menu">
-              <li class="auth-item">
-                <a class="auth-link" href="#">Войти</a>
+              <li class="auth-item header-auth-item">
+                <a class="auth-link user-link" href="#">Войти</a>
               </li>
             </ul>
             <ul class="shopping-menu header-shopping-menu">
-              <li class="shopping-item">
-                <a class="shopping-link" href="#">Сравнить</a>
+              <li class="shopping-item header-shopping-item">
+                <a class="shopping-link compare-link" href="#">Сравнить</a>
               </li>
-              <li class="shopping-item">
-                <a class="shopping-link" href="#">Корзина</a>
+              <li class="shopping-item header-shopping-item">
+                <a class="shopping-link cart-link" href="#">Корзина</a>
               </li>
             </ul>
           </div>
-          <ul class="site-menu header-site-menu">
-            <li class="site-menu-item header-catalog">
-              <a class="site-menu-link header-catalog-title" href="catalog.html">Каталог товаров</a>
+          <div class="site-navigation">
+            <div class="header-catalog-wrapper">
+              <a class="header-catalog-title" href="catalog.html">Каталог товаров</a>
+              <div class="header-catalog-underlay"></div>
               <ul class="header-catalog-menu">
                 <li class="header-catalog-item">
                   <a class="header-catalog-link" href="#">Виртуальная реальность</a>
@@ -55,17 +56,19 @@
                   <a class="header-catalog-link" href="#">Квадрокоптеры</a>
                 </li>
               </ul>
-            </li>
-            <li class="site-menu-item">
-              <a class="site-menu-link" href="#">Доставка</a>
-            </li>
-            <li class="site-menu-item">
-              <a class="site-menu-link" href="#">Гарантия</a>
-            </li>
-            <li class="site-menu-item">
-              <a class="site-menu-link" href="#">Контакты</a>
-            </li>
-          </ul>
+            </div>
+            <ul class="site-menu header-site-menu">
+              <li class="site-menu-item">
+                <a class="site-menu-link" href="#">Доставка</a>
+              </li>
+              <li class="site-menu-item">
+                <a class="site-menu-link" href="#">Гарантия</a>
+              </li>
+              <li class="site-menu-item">
+                <a class="site-menu-link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
@@ -84,14 +87,14 @@
               <img class="promo-image" src="img/slider-1.png" width="384" height="486" alt="Палка для селфи">
               <div class="promo-text">
                 <p class="promo-lead">Делай селфи,<br>как Бен Стиллер!</p>
-                <p class="desc promo-desc">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+                <p class="desc promo-desc">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
                 <table class="promo-table">
-                  <tr class="promo-row">
+                  <tr class="promo-row-top">
                     <td class="promo-cell">8,5 м</td>
                     <td class="promo-cell">5 кг</td>
                     <td class="promo-cell">Карбон</td>
                   </tr>
-                  <tr class="promo-row">
+                  <tr class="promo-row-bottom">
                     <td class="promo-cell">Длина палки</td>
                     <td class="promo-cell">Вес палки</td>
                     <td class="promo-cell">Материал</td>
@@ -104,12 +107,12 @@
               <img class="promo-image" src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
               <div class="promo-text">
                 <p class="promo-lead">Худеем<br>правильно!</p>
-                <p class="desc promo-desc">Мотивирующие фитнес-браслеты помогут найти в себе силы<br>не пропускать занятия и соблюдать диету.</p>
+                <p class="desc promo-desc">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
                 <table class="promo-table">
-                  <tr class="promo-row">
+                  <tr class="promo-row-top">
                     <td class="promo-cell">48 часов</td>
                   </tr>
-                  <tr class="promo-row">
+                  <tr class="promo-row-bottom">
                     <td class="promo-cell">Без подзарядки</td>
                   </tr>
                 </table>
@@ -119,14 +122,14 @@
             <li class="promo-item">
               <img class="promo-image" src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
               <div class="promo-text">
-                <p class="promo-lead">Порхает как бабочка,<br>жалит как пчела!</p>
-                <p class="desc promo-desc">Этот обычный, на первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под стандартную камеру.</p>
+                <p class="promo-lead">Порхает как бабочка, жалит как пчела!</p>
+                <p class="desc promo-desc">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
                 <table class="promo-table">
-                  <tr class="promo-row">
+                  <tr class="promo-row-top">
                     <td class="promo-cell">800 м</td>
                     <td class="promo-cell">50 м</td>
                   </tr>
-                  <tr class="promo-row">
+                  <tr class="promo-row-bottom">
                     <td class="promo-cell">Дальность полета</td>
                     <td class="promo-cell">Радиус поражения</td>
                   </tr>
@@ -163,7 +166,7 @@
               <a class="popular-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="popular-item">
-              <a class="popular-link" href="catalog.html">Моноподы<br>для селфи</a>
+              <a class="popular-link" href="catalog.html">Моноподы для селфи</a>
             </li>
             <li class="popular-item">
               <a class="popular-link" href="#">Экшн-камеры</a>
@@ -220,15 +223,19 @@
           <h2 class="visually-hidden">Бренды</h2>
           <ul class="brands-list">
             <li class="brands-item">
+              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-1.png" width="260" height="100" alt="DJI">
             </li>
             <li class="brands-item">
+              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-2.png" width="260" height="100" alt="SP Gadgets">
             </li>
             <li class="brands-item">
+              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-3.png" width="260" height="100" alt="GoPro">
             </li>
             <li class="brands-item">
+              <div class="brands-underlay"></div>
               <img class="brands-image" src="img/logo-4.png" width="260" height="100" alt="Vive">
             </li>
           </ul>
@@ -240,8 +247,8 @@
           <h2 class="visually-hidden">Справочная информация</h2>
           <div class="reference-item">
             <h3 class="reference-item-title main-section-title">О нас</h3>
-            <p class="desc reference-desc">Огромный выбор гаджетов не оставит равнодушным гика, <br>который есть в каждом из нас.</p>
-            <p class="desc reference-desc">Мы можем доставить ваш товар в самые отдаленные точки<br> России! <span class="uppercase-caption">Device</span> работает со многими транспортными компаниями:</p>
+            <p class="desc reference-desc">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p class="desc reference-desc">Мы можем доставить ваш товар в самые отдаленные точки России! <span class="uppercase-caption">Device</span> работает со многими транспортными компаниями:</p>
             <ul class="partners-list">
               <li class="partners-item">Деловые Линии</li>
               <li class="partners-item">Автотрейдинг</li>
@@ -266,16 +273,16 @@
         <a class="logo footer-logo disabled">Device</a>
         <div class="footer-user-block">
           <ul class="auth-menu footer-auth-menu">
-            <li class="auth-item">
-              <a class="auth-link" href="#">Войти</a>
+            <li class="auth-item footer-auth-item">
+              <a class="auth-link user-link" href="#">Войти</a>
             </li>
           </ul>
           <ul class="shopping-menu footer-shopping-menu">
-            <li class="shopping-item">
-              <a class="shopping-link" href="#">Сравнить</a>
+            <li class="shopping-item footer-shopping-item">
+              <a class="shopping-link compare-link" href="#">Сравнить</a>
             </li>
-            <li class="shopping-item">
-              <a class="shopping-link" href="#">Корзина</a>
+            <li class="shopping-item footer-shopping-item">
+              <a class="shopping-link cart-link" href="#">Корзина</a>
             </li>
           </ul>
         </div>
@@ -341,7 +348,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe class="modal-map-source" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473127!2d37.52742931534853!3d55.68703400453076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1529951504177" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe class="modal-map-source" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473127!2d37.52742931534853!3d55.68703400453076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1529951504177" width="960" height="559" style="border:0" allowfullscreen></iframe>
       <button class="modal-close-btn" type="button">
         <span class="visually-hidden">Закрыть</span>
       </button>
